--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 html {
     background-color: pink;
-    
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -22,14 +21,13 @@ html {
     align-items: center;
 }
 
-
 .navbaritem {
     margin: 50px 40px 0px 40px;
     color: black;
 }
 
 #login {
-    padding: 3px 20px 3px 20px;
+    padding: 3px 20px;
     margin-right: 200px;
     background-color: white;
     border: 2px solid;
@@ -65,7 +63,7 @@ p {
     border: none;
     width: 100px;
     height: 50px;
-    padding: 5px 20px 5px 20px;
+    padding: 5px 20px;
     box-shadow: 0px 10px 20px turquoise;
     border-radius: 15px 15px 15px;    
 }
